# openvibe-sdk

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CMakeListsTests.txt  CTestTestfile.cmake  CustomCMakeLists.txt-skeleton  DEPENDENCIES.md  INSTALL.md  MENSIA-COPYING  README.md
applications/developer-tools/id-generator/: CMakeLists.txt
applications/developer-tools/plugin-inspector/: CMakeLists.txt
applications/developer-tools/scenario-player/: CMakeLists.txt
build-tool/stimulation-generator/: CMakeLists.txt
build-tool/stimulation-generator/src/: ovbt_sg_cpp_code_generator.cpp  ovbt_sg_cpp_define_generator.cpp  ovbt_sg_defines.h  ovbt_sg_file_generator_base.h  ovbt_sg_main.cpp  ovbt_sg_matlab_generator.cpp
common/: CMakeLists.txt
common/include/: mCActivationTool.hpp  mCResampler.h  m_ConverterUtf8.h  ovCResampler.h  ov_common_defines.h  ov_common_types.h  ovp_global_defines.h
common/share/: activation-interface.ui-base
common/src/: main.cpp
documentation/: CMakeLists.txt
documentation/doc/: doxyfile-skeleton  footer.html  header.html-skeleton  header.tex-skeleton  licence.dox  mensia.css  openvibe.css  openvibe.dox-part
documentation/sphinx/: build-documentation.cmd  build-documentation.sh
documentation/src/: Doxyfile.in  build-documentation.cmake-skeleton  footer.html  header.html  openvibe-plugin-inspector.cmd
kernel/: CMakeLists.txt
kernel/share/: openvibe-scenario-v1.xsd  openvibe.conf  openvibe.conf-base
kernel/src/: ovk_base.h  ovk_defines.h  ovk_main.cpp  ovk_tools.h
kernel/src/kernel/: ovkCConfigurable.h  ovkCKernelContext.cpp  ovkCKernelContext.h  ovkCKernelObjectFactory.cpp  ovkCKernelObjectFactory.h  ovkCObjectVisitorContext.cpp  ovkCObjectVisitorContext.h  ovkCParameter.h  ovkCTypeManager.cpp  ovkCTypeManager.h  ovkTConfigurable.h  ovkTKernelObject.h  ovkTParameter.h
kernel/src/tools/: ovkCKernelObjectFactoryHelper.h  ovkCScopeTester.cpp  ovkCScopeTester.h  ovkCSettingChecker.h  ovkSBoxProto.h  ovk_identifier_map_iterator.h  ovk_setting_checker.h
modules/communication/: CMakeLists.txt
modules/communication/src/: ovCMessaging.cpp  ovCMessagingClient.cpp  ovCMessagingImpl.hpp  ovCMessagingProtocol.cpp  ovCMessagingServer.cpp
modules/csv/: CMakeLists.txt
modules/csv/src/: ovCCSV.cpp  ovCCSV.hpp  ovICSV.cpp
modules/date/: CMakeLists.txt
modules/date/src/: DateParser.cpp  WindowsDateParser.cpp
modules/fs/: CMakeLists.txt
modules/fs/src/: Files.cpp  IEntryEnumerator.cpp
modules/fs/test/: CMakeLists.txt
modules/socket/: CMakeLists.txt
modules/socket/src/: IConnection.cpp  IConnection.inl  IConnectionClient.cpp  (+5 more)
modules/system/: CMakeLists.txt
modules/xml/: CMakeLists.txt
openvibe/: CMakeLists.txt
openvibe/src/: CErrorManager.cpp  CIdentifier.cpp  CMatrix.cpp  CNameValuePairList.cpp  CStimulationSet.cpp  CTime.cpp  ovCIdentifier.cpp  ovCKernelLoader.cpp  ovCMatrix.cpp  ovCMemoryBuffer.cpp  ovCNameValuePairList.cpp  ovCObservable.cpp  ovCStimulationSet.cpp  ovCString.cpp  ov_main.cpp
openvibe/test/: CMakeLists.txt  CMatrixTest.hpp  CStimulationTest.hpp  directoriesTest.hpp  main.cpp  utils.hpp
openvibe/tests/: CMakeLists.txt  CStimulationTest.hpp  CTimeTest.hpp  main.cpp
toolkit/: CMakeLists.txt
toolkit/share/: stimulation_list.txt
toolkit/src/: ovtk_main.cpp
unit-test/: CMakeLists.txt  CTestCustom.cmake.in
unit-test/common/: ovtKernelContext.cpp  ovtKernelContext.h
unit-test/module-fs/: CMakeLists.txt  Test_Files.hpp  Test_Files_UTF.hpp  main.cpp
unit-test/openvibe-base/: CMakeLists.txt  uoCMatrixTest.cpp  uoTimeArithmeticTest.cpp
unit-test/openvibe-kernel/: CMakeLists.txt  urErrorManagerTest.cpp
unit-test/openvibe-module-csv/: CMakeLists.txt  uoCSVReaderTest.cpp  uoCSVWriterTest.cpp
unit-test/openvibe-module-ebml/: CMakeLists.txt  uoEBMLReaderTest.cpp  uoEBMLWriterTest.cpp
unit-test/openvibe-module-fs/: CMakeLists.txt  uoEntryEnumeratorTest.cpp  uoFilesTest.cpp  uoFilesTestUTF.cpp
unit-test/openvibe-module-socket/: CMakeLists.txt  uoSocketClientServerASyncCommunicationTest.cpp  uoSocketClientServerBaseTest.cpp  uoSocketClientServerSyncCommunicationTest.cpp
unit-test/openvibe-module-system/: CMakeLists.txt  uoDynamicModuleTest.cpp  uoTimeTest.cpp
unit-test/openvibe-module-xml/: CMakeLists.txt  uoXMLReaderTest.cpp  uoXMLWriterTest.cpp
unit-test/openvibe-plugin-stream-codecs/: CMakeLists.txt  uoStreamedMatrixTest.cpp
unit-test/openvibe-toolkit/: CMakeLists.txt  uoMatrixToolkitTest.cpp  urExportScenarioToFileTest.cpp  urImportScenarioFromFileTest.cpp  urSimpleTestScenarioDefinition.h  urValidateScenarioTest.cpp
unit-test/ov-base/: CErrorManagerTest.hpp  CIdentifierTest.hpp  CMakeLists.txt  CMatrixTest.hpp  CMatrixTests.hpp  CNameValuePairListTest.hpp  CStimulationSetTest.hpp  CStimulationSetTests.hpp  CTimeTest.hpp  main.cpp  utils.hpp
unit-test/unit-toolkit/: CMakeLists.txt
validation-test/: CMakeLists.txt
validation-test/openvibe-classification-lda/: CMakeLists.txt  LDA-Classification.xml.in  LDA-Native.xml.in  LDA-Onevsall.xml.in  LDA-Onevsone-HT.xml.in  LDA-Onevsone-PKPD.xml.in  LDA-Onevsone-Voting.xml.in
validation-test/openvibe-file-io-csv/: CMakeLists.txt  csv-comparator.py  empty-labels-matrix.xml.in  empty-labels-vector.xml.in  features.xml.in  signal-badtimes.xml.in  signal-nofiletime.xml.in  signal.xml.in  spectrum.xml.in  stimulation.xml.in  streamed-matrix.xml.in  vector-matrix.xml.in
validation-test/openvibe-file-io-openvibe/: CMakeLists.txt  read-write.xml.in
validation-test/openvibe-file-io-ovcsv/: CMakeLists.txt  csv-comparator.py  features.xml.in  input-features.csv  input-signal.csv  input-spectrum.csv  input-stimulation.csv  input-streamed-matrix.csv  signal.xml.in  spectrum.xml.in  stimulation.xml.in  streamed-matrix.xml.in
validation-test/openvibe-regularized-csp/: CMakeLists.txt  regularized-csp-train.xml.in  regularized-csp.xml.in
validation-test/openvibe-stimulation-timeout/: CMakeLists.txt  csv-analyser.py  reference.csv  timeout.xml.in
validation-test/python-toolkit/: accuracy.py  classification.py  csv-analyser.py  csv-comparator.py
(+1126 files in other folders)
