PROJECT(openvibe-common)

SET(PROJECT_VERSION_MAJOR ${OV_GLOBAL_VERSION_MAJOR})
SET(PROJECT_VERSION_MINOR ${OV_GLOBAL_VERSION_MINOR})
SET(PROJECT_VERSION_PATCH ${OV_GLOBAL_VERSION_PATCH})
SET(PROJECT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})

FILE(GLOB_RECURSE source_files src/*.h src/*.cpp include/*.h include/*.hpp)
INCLUDE_DIRECTORIES(include)

# A headers-only project, the executable is a NOP having some static asserts, not to be installed.
ADD_EXECUTABLE(${PROJECT_NAME} ${source_files})
INCLUDE("FindThirdPartyBoost")
INCLUDE("FindThirdPartyGTK")
	
# ---------------------------------
# Target macros
# Defines target operating system
# Defines target architecture
# Defines target compiler
# ---------------------------------
SET_BUILD_PLATFORM()
# -----------------------------
# Install files
# -----------------------------

INSTALL(DIRECTORY include/   DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR} FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h" PATTERN ".svn" EXCLUDE PATTERN "doc" EXCLUDE)

# Configure Gtk ui file:
CONFIGURE_FILE(share/activation-interface.ui-base "${CMAKE_CURRENT_BINARY_DIR}/activation-interface.ui")
INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/activation-interface.ui" DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}/mensia/neurort-activation)
